WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175991
REGRESSION(
r221017
): Quip stuck in a perpetual loading loop
https://bugs.webkit.org/show_bug.cgi?id=175991
Summary
REGRESSION(r221017): Quip stuck in a perpetual loading loop
Brent Fulgham
Reported
2017-08-25 12:18:14 PDT
After
r221017
, attempts to run Quip in Safari fails because it keeps attempting to reload the page.
Attachments
Patch
(1.89 KB, patch)
2017-08-25 12:23 PDT
,
Brent Fulgham
dbates
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2017-08-25 12:18:28 PDT
<
rdar://problem/34044445
>
Brent Fulgham
Comment 2
2017-08-25 12:23:32 PDT
Created
attachment 319094
[details]
Patch
Brent Fulgham
Comment 3
2017-08-25 13:10:53 PDT
Committed
r221202
: <
http://trac.webkit.org/changeset/221202
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug