REGRESSION(r221017): Quip stuck in a perpetual loading loop https://bugs.webkit.org/show_bug.cgi?id=175991 <rdar://problem/34044445>

Reviewed by Daniel Bates.

This is a quick fix to return proper function to WebKit. I'll relate a follow-up fix that
addresses WebSockets more completely.

* platform/network/mac/CookieJarMac.mm:
(WebCore::cookieRequestHeaderFieldValue): Don't hard code a value of 'No' for returning secure
cookies. HTTPS connection should get secure cookies.


Canonical link: https://commits.webkit.org/192650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221202 268f45cc-cd09-0410-ab3c-d52691b4dbfc